# geant4_muon_detector

./: READ ME.txt  evaluate_production.ipynb  run_single.sh
CosmicMuonSim/: CMakeLists.txt  main.cc
CosmicMuonSim/include/: PrimaryGeneratorAction.hh  RunAction.hh  ScintHit.hh
CosmicMuonSim/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
CosmicMuonSim_test_Bfield/: merge_runs.py  plot_electron_spirals.py  plot_results.py
CosmicMuonSim_test_Bfield/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  ScintillatorSD.hh  SteppingAction.hh  TrackingAction.hh
CosmicMuonSim_test_Bfield/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  ScintillatorSD.cc  TrackingAction.cc
Scintillator_sim/: READ ME.txt  evaluate_sim.ipynb  mingle_master_production.cc  pmt_lut_e+.json  pmt_lut_e-.json  pmt_lut_mu+.json  pmt_lut_mu-.json  run.mac  run_production.sh
simulation_based_on_source_below_ceiling/: CMakeLists.txt  README.md  main.cc
simulation_based_on_source_below_ceiling/include/: DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
simulation_based_on_source_below_ceiling/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
